# wlr_ws

./: .gitignore  DESIGN.md  README.md
Wheel-Legged-Gym/: PROJECT_SUMMARY.md  deploy_fix6_feedforward.sh
Wheel-Legged-Gym/resources/robots/wl/launch/: gazebo.launch
Wheel-Legged-Gym/resources/robots/wl/urdf/: wl.urdf
Wheel-Legged-Gym/wheel_legged_gym/envs/: __init__.py
Wheel-Legged-Gym/wheel_legged_gym/envs/base/: legged_robot.py
Wheel-Legged-Gym/wheel_legged_gym/envs/wheel_legged_vmc/: wheel_legged_vmc_config.py
Wheel-Legged-Gym/wheel_legged_gym/envs/wheel_legged_vmc_flat/: __init__.py  lqr_gpu.py  wheel_legged_residual_flat.py  wheel_legged_residual_flat_config.py  wheel_legged_vmc_flat_config.py
Wheel-Legged-Gym/wheel_legged_gym/rsl_rl/modules/: actor_critic_sequence.py
Wheel-Legged-Gym/wheel_legged_gym/utils/: task_registry.py
src/wlr_controller/: package.xml  setup.cfg  setup.py
src/wlr_controller/config/: params.yaml
src/wlr_controller/launch/: control.launch.py
src/wlr_controller/wlr_controller/: balance_node.py  leg_jacobian.py  lqr_gains.py  vmc.py
src/wlr_description/: CMakeLists.txt  package.xml
src/wlr_description/config/: controllers.yaml
src/wlr_description/launch/: display.launch.py
src/wlr_description/rviz/: config.rviz
src/wlr_description/urdf/: gazebo.xacro  leg.urdf.xacro  materials.xacro  wlr_robot.urdf.xacro
src/wlr_gazebo/: CMakeLists.txt  package.xml
src/wlr_gazebo/env-hooks/: wlr_gazebo.dsv.in
src/wlr_gazebo/launch/: sim.launch.py
src/wlr_gazebo/src/: FiveBarClosure.cc
src/wlr_gazebo/worlds/: empty.sdf
