<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wlr_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation for wheeled-legged robot</description>
  <maintainer email="zhaohy@example.com">Zhaohy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gz_sim_vendor</build_depend>
  <build_depend>gz_plugin_vendor</build_depend>

  <depend>wlr_description</depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
